Restructure buttons for coordinate selections and adding my location button

--- a/src/pages/coordinate-modal/coordinate-modal.html
+++ b/src/pages/coordinate-modal/coordinate-modal.html
@@ -19,27 +19,5 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <coordinate [position]="position" (onCoordinateChange)="changeCoordinate($event)"></coordinate>
+  <coordinate [position]="position" (onDismissView)="dismiss()" (onCoordinateChange)="changeCoordinate($event)"></coordinate>
 </ion-content>
-<ion-footer>
-  <ion-toolbar>
-    <div>
-    </div>
-    <ion-row no-padding>
-      <ion-col>
-        <div class="item-card" color="font-color" (tap)="dismiss()" ion-button clear text-justify>
-          <ion-icon name="arrow-back" color="icon-color"></ion-icon>&nbsp;
-          <span [translate]="'Back'"></span>
-        </div>
-      </ion-col>
-      <ion-col col-auto>
-        <div float-right>
-          <div class="item-card" color="font-color" (tap)="save()" ion-button clear text-justify>
-            <ion-icon name="done-all" color="icon-color"></ion-icon>&nbsp;
-            <span [translate]="'Done'"></span>
-          </div>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-toolbar>
-</ion-footer>
