--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -77,6 +77,7 @@
                     <div>
                       <div class="inputLabel">
                         {{ currentProgram.enrollmentDateLabel}}
+                        <span class="required">&nbsp;*</span>
                       </div>
                       <div [ngClass]="(isTrackedEntityRegistered)? 'input-field-container-success' : 'input-field-container'">
                         <ion-item>
@@ -84,8 +85,9 @@
                             pickerFormat="YYYY MM DD"></ion-datetime>
                         </ion-item>
                       </div>
-                      <div class="inputLabel">
+                      <div class="inputLabel" *ngIf="currentProgram && currentProgram.displayIncidentDate">
                         {{ currentProgram.incidentDateLabel}}
+                        <span class="required">&nbsp;*</span>
                       </div>
                       <div [ngClass]="(isTrackedEntityRegistered)? 'input-field-container-success' : 'input-field-container'">
                         <ion-item>
