feat(custom-data entry): Added type input

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="#488aff">
 
   <script type="application/javascript" src="assets/library/jquery/jquery-2.1.1.min.js"></script>
+  <script type="application/javascript" src="assets/library/jquery-ui/jquery-ui.min.js"></script>
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
@@ -36,6 +37,9 @@
   <link href="assets/leaflet.css" rel="stylesheet">
   <link href="assets/styles.css" rel="stylesheet">
 
+  <!--add css for jquery ui-->
+  <link href="assets/library/jquery-ui/jquery-ui.min.css" rel="stylesheet">
+  <link href="assets/library/jquery-ui/jquery-ui.structure.min.css" rel="stylesheet">
 </head>
 <body>
 
