--- a/src/pages/data-entry/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.html
@@ -61,6 +61,7 @@
               [data]="dataValuesObject"
               [entryFormSections]="entryFormSections"
               [dataUpdateStatus]="dataUpdateStatus"
+              [type]="'AGGREGATE'"
             ></custom-data-entry-form>
           </div>
           <div *ngIf="entryFormType && entryFormType != 'CUSTOM'">
