--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -113,21 +113,25 @@
                   <div *ngIf="!isFormReady">
                     <loading [loadingMessage]="''" [loadingSize]="'large'"></loading>
                   </div>
-                  <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0 && isFormReady">
-                    <ion-row no-padding no-margin>
-                      <ion-col>
-                        <form>
-                          <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes;trackBy: trackByFn">
-                            <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute" [currentUser]="currentUser"
-                              [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
-                              [mandatory]="programTrackedEntityAttribute.mandatory" (onChange)="updateData($event,false)"></tracked-entity-inputs>
-                          </div>
-                        </form>
-                      </ion-col>
-                    </ion-row>
-
+                  <div *ngIf="formLayout === 'customLayout' && trackerRegistrationForm !== '' ">
+                    formLayout : {{ formLayout }}
+                    <br> trackerRegistrationForm :: {{ trackerRegistrationForm }}
                   </div>
-
+                  <div *ngIf="!(formLayout === 'customLayout' && trackerRegistrationForm !== '' )">
+                    <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0 && isFormReady">
+                      <ion-row no-padding no-margin>
+                        <ion-col>
+                          <form>
+                            <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes;trackBy: trackByFn">
+                              <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute" [currentUser]="currentUser"
+                                [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+                                [mandatory]="programTrackedEntityAttribute.mandatory" (onChange)="updateData($event,false)"></tracked-entity-inputs>
+                            </div>
+                          </form>
+                        </ion-col>
+                      </ion-row>
+                    </div>
+                  </div>
                   <ion-row no-padding no-margin>
                     <ion-col>
                       <div float-left>
