--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -113,7 +113,7 @@
                   <div *ngIf="!isFormReady">
                     <loading [loadingMessage]="''" [loadingSize]="'large'"></loading>
                   </div>
-                  <tracker-registration-form [formLayout]="formLayout" [dataObject]="dataObject" [currentUser]="currentUser" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+                  <tracker-registration-form [formLayout]="formLayout" [dataObject]="dataObject" [dataUpdateStatus]="dataUpdateStatus$ | async" [currentUser]="currentUser" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
                     [trackerRegistrationForm]="trackerRegistrationForm" [programTrackedEntityAttributes]="programTrackedEntityAttributes"
                     (onChange)="updateData($event,false)"></tracker-registration-form>
                   <ion-row no-padding no-margin>
