Sanitize all metadata for hide and show visible header

--- a/src/pages/hide-and-show-columns/hide-and-show-columns.html
+++ b/src/pages/hide-and-show-columns/hide-and-show-columns.html
@@ -23,4 +23,5 @@
 <ion-content padding>
   selectedItemsModel : {{ selectedItemsModel|json}}
   <br> fieldsToDisplay : {{ fieldsToDisplay|json}}
+  <br> displayInLIst : {{ displayInLIst|json}}
 </ion-content>
