--- a/src/pages/hide-and-show-columns/hide-and-show-columns.html
+++ b/src/pages/hide-and-show-columns/hide-and-show-columns.html
@@ -20,8 +20,65 @@
 </ion-header>
 
 
-<ion-content padding>
-  selectedItemsModel : {{ selectedItemsModel|json}}
-  <br> fieldsToDisplay : {{ fieldsToDisplay|json}}
-  <br> displayInLIst : {{ displayInLIst|json}}
+<ion-content>
+  <div *ngIf="isLoading">
+    <loading [loadingSize]="loadingSize"></loading>
+  </div>
+  <div *ngIf="!isLoading">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <div class="animated fadeIn">
+            <div>
+              <div class="item-card" (click)="updateSelection('All')" color="font-color" padding-top padding-bottom ion-button clear text-center
+                text-capitalize icon-start>
+                <span [translate]="'All'"></span>
+              </div>
+              <div class="item-card" (click)="updateSelection('None')" color="font-color" padding-top padding-bottom ion-button clear text-center
+                text-capitalize icon-start>
+                <span [translate]="'None'"></span>
+              </div>
+              <div class="item-card" (click)="updateSelection('Reset')" color="font-color" padding-top padding-bottom ion-button clear
+                text-center text-capitalize icon-start>
+                <span [translate]="'Reset'"></span>
+              </div>
+              <div class="item-card" (click)="saveChanges()" color="font-color" padding-top padding-bottom ion-button clear text-center
+                text-capitalize icon-start>
+                <span [translate]="'Done'"></span>
+              </div>
+            </div>
+            <!-- selection of items for column heades-->
+            <div>
+              <div class="item-card">
+                <ion-item no-lines *ngFor="let field of fieldsToDisplay;trackBy: trackByFn">
+                  <ion-label>{{ field.name }}</ion-label>
+                  <ion-checkbox [(ngModel)]="selectedItemsModel[field.id]"></ion-checkbox>
+                </ion-item>
+              </div>
+            </div>
+            <div>
+              <div class="item-card" (click)="updateSelection('All')" color="font-color" padding-top padding-bottom ion-button clear text-center
+                text-capitalize icon-start>
+                <span [translate]="'All'"></span>
+              </div>
+              <div class="item-card" (click)="updateSelection('None')" color="font-color" padding-top padding-bottom ion-button clear text-center
+                text-capitalize icon-start>
+                <span [translate]="'None'"></span>
+              </div>
+              <div class="item-card" (click)="updateSelection('Reset')" color="font-color" padding-top padding-bottom ion-button clear
+                text-center text-capitalize icon-start>
+                <span [translate]="'Reset'"></span>
+              </div>
+              <div class="item-card" (click)="saveChanges()" color="font-color" padding-top padding-bottom ion-button clear text-center
+                text-capitalize icon-start>
+                <span [translate]="'Done'"></span>
+              </div>
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+
+
 </ion-content>
