Adding icons on hide and show visible columns

--- a/src/pages/hide-and-show-columns/hide-and-show-columns.html
+++ b/src/pages/hide-and-show-columns/hide-and-show-columns.html
@@ -32,18 +32,22 @@
             <div>
               <div class="item-card" (click)="updateSelection('All')" color="font-color" padding-top padding-bottom ion-button clear text-center
                 text-capitalize icon-start>
+                <img class="side-menu-icon" [src]="icons.all" />&nbsp;&nbsp;
                 <span [translate]="'All'"></span>
               </div>
               <div class="item-card" (click)="updateSelection('None')" color="font-color" padding-top padding-bottom ion-button clear text-center
                 text-capitalize icon-start>
+                <img class="side-menu-icon" [src]="icons.none" />&nbsp;&nbsp;
                 <span [translate]="'None'"></span>
               </div>
               <div class="item-card" (click)="updateSelection('Reset')" color="font-color" padding-top padding-bottom ion-button clear
                 text-center text-capitalize icon-start>
+                <ion-icon name="refresh"></ion-icon>&nbsp;&nbsp;
                 <span [translate]="'Reset'"></span>
               </div>
               <div class="item-card" (click)="saveChanges()" color="font-color" padding-top padding-bottom ion-button clear text-center
                 text-capitalize icon-start>
+                <img class="side-menu-icon" [src]="icons.done" />&nbsp;&nbsp;
                 <span [translate]="'Done'"></span>
               </div>
             </div>
@@ -59,18 +63,22 @@
             <div>
               <div class="item-card" (click)="updateSelection('All')" color="font-color" padding-top padding-bottom ion-button clear text-center
                 text-capitalize icon-start>
+                <img class="side-menu-icon" [src]="icons.all" />&nbsp;&nbsp;
                 <span [translate]="'All'"></span>
               </div>
               <div class="item-card" (click)="updateSelection('None')" color="font-color" padding-top padding-bottom ion-button clear text-center
                 text-capitalize icon-start>
+                <img class="side-menu-icon" [src]="icons.none" />&nbsp;&nbsp;
                 <span [translate]="'None'"></span>
               </div>
               <div class="item-card" (click)="updateSelection('Reset')" color="font-color" padding-top padding-bottom ion-button clear
                 text-center text-capitalize icon-start>
+                <ion-icon name="refresh"></ion-icon>&nbsp;&nbsp;
                 <span [translate]="'Reset'"></span>
               </div>
               <div class="item-card" (click)="saveChanges()" color="font-color" padding-top padding-bottom ion-button clear text-center
                 text-capitalize icon-start>
+                <img class="side-menu-icon" [src]="icons.done" />&nbsp;&nbsp;
                 <span [translate]="'Done'"></span>
               </div>
             </div>
