--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -147,6 +147,18 @@
                     </ion-item>
                     <ion-item no-lines>
                       <ion-label>
+                        <span [translate]="'Show barcode reader on numerical fields'"></span>
+                      </ion-label>
+                      <ion-toggle (ionChange)="applySettings(settingContent)" color="primary" [(ngModel)]="settingObject.entryForm.allowBarcodeReaderOnNumerical"></ion-toggle>
+                    </ion-item>
+                    <ion-item no-lines>
+                      <ion-label>
+                        <span [translate]="'Show barcode reader on text fields'"></span>
+                      </ion-label>
+                      <ion-toggle (ionChange)="applySettings(settingContent)" color="primary" [(ngModel)]="settingObject.entryForm.allowBarcodeReaderOnText"></ion-toggle>
+                    </ion-item>
+                    <ion-item no-lines>
+                      <ion-label>
                         <span [translate]="'Show alert on assignement issues'"></span>
                       </ion-label>
                       <ion-toggle (ionChange)="applySettings(settingContent)" color="primary" [(ngModel)]="settingObject.entryForm.showAlertOnFormAssignement"></ion-toggle>
