Adding action button for accept or decline updates from server or conflicts of online and ofline data values

--- a/src/pages/data-entry/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.html
@@ -19,7 +19,7 @@
     <ion-row>
       <ion-col>
         <div *ngIf="entryFormParameter" class="item-card" full padding-bottom padding-top>
-          <div (tap)="goBack()" padding-bottom>
+          <div (tap)="goBack()">
             <b>
               <span [translate]="'Organisation unit'"></span>
             </b> : {{ entryFormParameter.orgUnit.name }}
